# Arynox_Ai_OS

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  project_manifest.txt
.github/workflows/: ci.yml  release.yml
ai-python/: pyproject.toml  setup.py
ai-python/arynox_ai/: __init__.py  config.py  main.py
ai-python/arynox_ai/agent/: __init__.py  agent.py
ai-python/arynox_ai/memory/: store.py
ai-python/arynox_ai/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq.py  lm_studio.py  ollama_provider.py  openai_provider.py
ci/workflows/: build-test.yml
config/: ai-runtime.yaml
core/arynox-boot-check/: Cargo.toml
core/arynox-boot-check/src/: main.rs
core/arynox-session/: Cargo.toml
core/arynox-session/src/: main.rs
core/arynox-tpm/: Cargo.toml
core/arynox-tpm/src/: main.rs
docs/api/: README.md
docs/development/: CODING_STANDARDS.md  RELEASE_CHECKLIST.md
docs/modules/boot/: ARCH.md
docs/modules/desktop/: ARCH.md
docs/modules/wm/: ARCH.md
scripts/: build-all.sh  build-core.sh  build-final-iso.sh  build-final.sh  build-flutter.sh  build-flutter2.sh  build-full-os.sh  build-initramfs.sh  build-inside-wsl.sh  build-iso-only.sh  build-iso.sh  build-kernel.sh  build-release.sh  build-rust-wsl.sh  build-rust.sh  build-usb-image.sh  build-wsl.bat  check-compilation.sh  check-crates.sh  check-flutter.sh  check-grub.sh  check-kernel-modules.sh  check-linux-dir.sh  check-rootimg.sh  check-rust.sh  cleanup.sh  diagnose-wsl.sh  fix-existing-images.sh  fix-rootfs-apt.sh  fix-rootfs-full.sh  fix-rootfs-kernel.sh  fix-rootfs-manual.sh  fix-rootfs-packages.sh  fix-usb-apparmor.sh  fix-usb-direct.sh  fix-usb-fastboot.sh  fix-usb-grub.sh  fix-usb-no-initramfs.sh  fix-usb-rootdevice.sh  fix-usb-ubuntu-kernel.sh  (+6 more)
src/ai/assistant/: README.md  pubspec.yaml
src/ai/assistant/lib/: main.dart
src/ai/assistant/linux/: CMakeLists.txt
src/ai/assistant/linux/runner/: my_application.cc
src/ai/assistant/test/: widget_test.dart
src/ai/copilot/: README.md  pubspec.yaml
src/ai/copilot/lib/: main.dart
src/ai/copilot/linux/: CMakeLists.txt
src/ai/copilot/linux/runner/: my_application.cc
src/ai/copilot/test/: widget_test.dart
src/ai/hub/: README.md  pubspec.yaml
src/ai/hub/lib/: main.dart
src/ai/hub/linux/: CMakeLists.txt
src/ai/hub/linux/runner/: my_application.cc
src/ai/hub/test/: widget_test.dart
src/boot/: kernel-config-6.6
src/boot/initramfs/hooks/: arynox-base
src/boot/initramfs/scripts/: arynox-boot
src/boot/loader/: arynox-os.conf  arynox-recovery.conf  arynox-snapshot.conf  loader.conf
src/boot/systemd/: arynox-ai-runtime.service  arynox-boot-complete.service  arynox-compositor.service  arynox-session.service
src/cloud/: Cargo.toml
src/cloud/src/: main.rs
src/desktop/: README.md  pubspec.yaml
src/desktop/lib/: main.dart
src/desktop/lib/core/design/: app_colors.dart  app_theme.dart
src/desktop/lib/core/models/: app_info.dart  notification.dart
src/desktop/lib/core/services/: shell_state.dart
src/desktop/lib/core/widgets/: arynox_icon.dart  glass_container.dart
src/desktop/lib/shell/: arynox_shell.dart
src/desktop/lib/shell/control_center/: control_center.dart
src/desktop/lib/shell/dock/: dock.dart
src/desktop/lib/shell/launcher/: launcher.dart
src/desktop/linux/: CMakeLists.txt
src/desktop/linux/runner/: my_application.cc
src/desktop/test/: widget_test.dart
src/devices/: Cargo.toml  README.md  pubspec.yaml
src/devices/lib/: main.dart
src/devices/linux/: CMakeLists.txt
src/devices/linux/runner/: my_application.cc
src/devices/src/: main.rs
src/devices/test/: widget_test.dart
src/devtools/: Cargo.toml  README.md  pubspec.yaml
src/devtools/lib/: main.dart
src/devtools/linux/: CMakeLists.txt
src/devtools/linux/runner/: my_application.cc
src/devtools/src/: main.rs
src/devtools/test/: widget_test.dart
src/files/: Cargo.toml  README.md  pubspec.yaml
src/files/lib/: main.dart
src/files/linux/: CMakeLists.txt
src/files/linux/runner/: my_application.cc
src/files/src/: main.rs
src/files/test/: widget_test.dart
src/installer/: Cargo.toml  README.md  pubspec.yaml
src/installer/lib/: main.dart
src/installer/linux/: CMakeLists.txt
src/installer/linux/runner/: my_application.cc
src/installer/src/: main.rs
src/installer/test/: widget_test.dart
src/network/: Cargo.toml  README.md  pubspec.yaml
src/network/lib/: main.dart
src/network/linux/: CMakeLists.txt
src/network/linux/runner/: my_application.cc
src/network/src/: main.rs
src/network/test/: widget_test.dart
src/recovery/: Cargo.toml
src/recovery/src/: main.rs
src/security/: Cargo.toml
src/security/src/: main.rs
src/settings/: README.md  pubspec.yaml
src/settings/lib/: main.dart
src/settings/lib/pages/: ai_settings_page.dart  appearance_page.dart  display_page.dart  network_page.dart  privacy_page.dart  security_page.dart  settings_home.dart  system_page.dart
src/settings/lib/providers/: settings_providers.dart
src/settings/linux/: CMakeLists.txt
src/settings/linux/runner/: my_application.cc
src/settings/test/: widget_test.dart
src/software/: README.md  pubspec.yaml
src/software/lib/: main.dart
src/software/linux/: CMakeLists.txt
src/software/linux/runner/: my_application.cc
src/software/test/: widget_test.dart
src/updates/: Cargo.toml
src/updates/src/: main.rs
src/wm/: Cargo.toml
src/wm/src/: main.rs
src/wm/src/dbus/: mod.rs
src/wm/src/input/: mod.rs
src/wm/src/layout/: mod.rs
src/wm/src/render/: mod.rs
src/wm/src/shell/: mod.rs  window.rs
src/wm/src/utils/: mod.rs
tests/: README.md
tests/unit/ai/: test_agent.rs
tests/unit/wm/: test_layout.rs
(+4 files in other folders)
