[workspace]
resolver = "2"
members = [
    "core/*",
    "src/wm",
    "src/files",
    "src/devices",
    "src/packages",
    "src/network",
    "src/security",
    "src/cloud",
    "src/updates",
    "src/installer",
    "src/recovery",
    "src/devtools",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "3", features = ["tokio"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
