[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arynox-ai-runtime"
version = "0.1.0"
description = "Arynox OS - AI Runtime Daemon"
authors = ["Arynox Technologies"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9"
pydantic = "^2.6"
pydantic-settings = "^2.1"
sqlite-utils = "^3.37"
httpx = "^0.27"
numpy = "^1.26"
Pillow = "^10.2"
pyyaml = "^6.0"
dbus-next = "^0.2.3"
openai = "^1.14"
anthropic = "^0.35"
google-generativeai = "^0.6"
ollama = "^0.3"
uvicorn = "^0.27"
fastapi = "^0.110"
sse-starlette = "^1.8"

[tool.poetry.scripts]
arynox-ai-runtime = "arynox_ai.main:main"
