[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arynox-ai-runtime"
version = "0.1.0"
description = "Arynox OS - AI Runtime Daemon"
authors = [
    { name = "Arynox Technologies" },
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "pyyaml",
]

[project.scripts]
arynox-ai-runtime = "arynox_ai.main:main"

[tool.setuptools.packages.find]
include = ["arynox_ai*"]
