[package]
name = "arynox-boot-check"
version = "0.1.0"
edition = "2021"
description = "Arynox OS - Boot health check and completion signal"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
systemstat = "0.2"
