[package]
name = "arynox-cloud"
version = "1.0.0"
edition = "2021"
description = "Arynox OS Cloud Services Daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "3", features = ["tokio"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
