[package]
name = "arynox-devtools"
version = "0.1.0"
edition = "2021"
description = "Arynox OS Developer Tools Daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
zbus = { version = "3", features = ["tokio"] }
