[package]
name = "arynox-files"
version = "0.1.0"
edition = "2021"
description = "Arynox OS File Manager - Rust backend daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
zbus = { version = "3", features = ["tokio"] }
