[package]
name = "arynox-security"
version = "1.0.0"
edition = "2021"
description = "Arynox OS Security Framework Daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
zbus = { version = "3", features = ["tokio"] }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
