[package]
name = "arynox-updates"
version = "0.1.0"
edition = "2021"
description = "Arynox OS OTA Update Daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
zbus = { version = "3", features = ["tokio"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
