[package]
name = "arynox-compositor"
version = "0.1.0"
edition = "2021"
description = "Arynox OS - Wayland Compositor / Window Manager (D-Bus IPC)"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
zbus = { version = "3", features = ["tokio"] }
